<resources>
    <!--CREATED BY SYSTEM-->
    <string name="app_name">Task</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <!--NOTIFICATION-->
    <string name="channel_name">Tasks</string>
    <string name="channel_description">This channel is responsible
    to send you notifications about your events booked</string>

    <!--BUTTON OR EDIT TEXT-->
    <string name="menu_home">Home</string>
    <string name="menu_done">Done</string>
    <string name="menu_todo">To do</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="login">Login</string>
    <string name="title_activity_register">Register user</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_rewrite_password">Rewrite password</string>
    <string name="prompt_current_password">Current password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_rewrite_new_password">Rewrite the new password</string>
    <string name="prompt_name">Name</string>

    <!--ERROR-->
    <string name="login_failed">"Login failed"</string>
    <string name="user_validation_exception">Error, enter all values</string>
    <string name="generic_error">One error happened</string>
    <string name="upload_failed">Uploaded failed!</string>

    <!--SUCCESSFUL MESSAGES-->
    <string name="user_saved_message">User registered with success!</string>
    <string name="user_updated">User updated!</string>
    <string name="username_updated">Username updated</string>
    <string name="task_saved_message">Task registered with success!</string>
    <string name="task_updated_message">Task updated with success!</string>
    <string name="task_deleted_message">Task deleted with success!</string>
    <string name="image_uploaded">Image uploaded!</string>

    <!--VALIDATION-->
    <string name="invalid_email">email is invalid!</string>
    <string name="validation_security_password">The password should contain at least 8 characters</string>
    <string name="validation_password_characters">The password should contain at least 8 characters</string>
    <string name="message_wrong_email_or_password">Authentication failed. Error email or password are wrong</string>
    <string name="description_validation">Error description cannot be empty</string>
    <string name="the_passwords_are_not_equals">The passwords are not equals</string>
    <string name="date_validation">Error date cannot be empty</string>
    <string name="error_type_the_current_password">Error type the current password</string>
    <string name="current_password_is_wrong">Error the current password is wrong</string>

    <!--TASK PROPRIETIES-->
    <string name="description">Description</string>
    <string name="priority">Priority</string>
    <string name="date">Date</string>
    <string name="completed">Completed</string>

    <!--ACTIONS-->
    <string name="title_alert_dialog_delete_task">Delete task</string>
    <string name="button_edit">Edit</string>
    <string name="button_register">Register</string>
    <string name="do_you_new_here">Do you new here?</string>
    <string name="click_here">Click here!</string>

    <!--AUTHENTICATION-->
    <string name="login_successful">signInWithEmail:success</string>
    <string name="login_unsuccessful">signInWithEmail:failure</string>

    <!--DATABASE ERRORS-->
    <string name="error_getting_user_name">Error getting user name.</string>
    <string name="error_getting_priorities">Error getting priorities.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="adding_error_user">Error adding user</string>
    <string name="error_update_user">Error updating user</string>
    <string name="error_update_username">Error updating username</string>
    <string name="error_update_task">Error updating task</string>
    <string name="error_getting_task_to_update">Error getting task to update.</string>
    <string name="error_adding_task">Error adding task</string>
    <string name="error_deleting_task">Error deleting task</string>

    <!-- LOG DATABASE CRUD-->
    <string name="user_added_log">User added with ID:</string>
    <string name="task_added_log">Task added with ID:</string>
    <string name="task_updated_log">Task updated with ID:</string>
    <string name="task_deleted_log">Task successfully deleted!</string>
    <string name="error_getting_all_tasks_log">Error getting all tasks.</string>

    <!-- PERMISSIONS -->
    <string name="no_user_permission">Permissions not granted by the user.</string>
</resources>
