<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <ImageView
        android:id="@+id/imageViewCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_to_do" />

    <TextView
        android:id="@+id/textViewTaskDescriptionList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/description"
        android:layout_toEndOf="@id/imageViewCompleted"/>

    <TextView
        android:id="@+id/textViewTaskPriorityList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textViewTaskDescriptionList"
        android:text="@string/priority"
        android:layout_below="@id/textViewTaskDescriptionList" />

    <TextView
        android:id="@+id/textViewTaskDueDateList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_below="@id/textViewTaskDescriptionList"
        android:layout_alignParentEnd="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/textViewTaskPriorityList"
        android:background="@color/colorGrayLight" />
</RelativeLayout>