<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".views.activity.ChangeUserDataActivity">

        <ProgressBar
            android:id="@+id/progressBarEditUser"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintStart_toStartOf="@+id/guideline10"
            app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword" />

        <TextView
            android:id="@+id/textViewPasswordsAreNotEqualsEditUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/the_passwords_are_not_equals"
            android:textColor="@color/colorAccent"
            android:textSize="10sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRewriteNewPassword" />

        <EditText
            android:id="@+id/editTextPasswordEditUser"
            style="@style/mEditTextColorsCustom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/prompt_current_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNameEditUser" />

        <EditText
            android:id="@+id/editTextNewPassword"
            style="@style/mEditTextColorsCustom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/prompt_new_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordEditUser" />

        <EditText
            android:id="@+id/editTextNameEditUser"
            style="@style/mEditTextColorsCustom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/prompt_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextRewriteNewPassword"
            style="@style/mEditTextColorsCustom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/prompt_rewrite_new_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNewPassword" />

        <Button
            android:id="@+id/buttonEditUser"
            android:layout_width="240dp"
            android:layout_height="0dp"
            android:layout_marginTop="148dp"
            android:background="@drawable/button_shape"
            android:text="@string/button_edit"
            android:textColor="@color/colorLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRewriteNewPassword" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>