<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".views.activity.RegisterActivity">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="370dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="372dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="370dp"
        android:layout_height="42dp"
        android:layout_marginTop="84dp"
        android:drawableStart="@drawable/ic_account"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/background_register_button"
        android:text="@string/register"
        android:textColor="@color/colorLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>